test/invalid/baseline/float.txt
Syntax error at line 1 in float.widl:
typedef unrestricted 3.14 X;
                     ^ Failed to parse float type
